dfir_rs/tests/snapshots/surface_fold__fold_tick@graphvis_dot.snap
---
source: hydroflow/tests/surface_fold.rs
expression: "df.meta_graph().unwrap().to_dot(&Default::default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_stream(items_recv)", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) fold::<\l    'tick,\l>(\l    Vec::new,\l    |old: &mut Vec<u32>, mut x: Vec<u32>| {\l        old.append(&mut x);\l    },\l)\l", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) for_each(|v| result_send.send(v).unwrap())", shape=house, fillcolor="#ffff88"]
    n4v1 [label="(n4v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n2v1 -> n3v1
    n1v1 -> n4v1
    n4v1 -> n2v1 [color=red]
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 1"
        n2v1
        n3v1
    }
}

